# todoist-deadline-countdown

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: countdown.yml
docs/superpowers/plans/: 2026-07-14-deadline-existence-query.md  2026-07-15-recurring-task-count-up.md
docs/superpowers/specs/: 2026-07-14-deadline-existence-query-design.md  2026-07-15-recurring-task-count-up-design.md
src/countdown/: __main__.py  format.py  timezone.py  todoist_client.py
tests/: test_format.py  test_idempotency.py  test_orchestrator.py  test_recurrence.py  test_timezone.py  test_todoist_client.py
