[project]
name = "todoist-deadline-countdown"
version = "0.1.0"
description = "Auto-suffix Todoist task titles with a countdown badge based on the deadline field."
requires-python = ">=3.12"
dependencies = [
    "todoist-api-python>=3.0.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/countdown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
